test/errors/segment2.input.asm

* = $801
!let fake = 0

!segment code(start=256, end=1024)

!segment fake ; can't use a variable, it's not a segment

